--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Sarvesh Pandey",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "pug": "^3.0.2"
   }
 }
