--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Sarvesh Pandey",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "pug": "^3.0.2"
